--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -32,8 +32,8 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-sm-offset-1 col-sm-11">
-                                    <button type="button" class="btn btn-primary disabled" id="redraw">Redraw</button>
-                                    <button type="button" class="btn btn-primary" id="save">Save</button>
+                                    <button type="button" class="btn btn-primary disabled" id="redrawBtnID">Redraw</button>
+                                    <button type="button" class="btn btn-primary" id="saveBtnID">Save</button>
                                 </div>
                             </div>
                         </form>
