--- a/client/views/diagram/sequence/segDgmList/seqDgmListItem.html
+++ b/client/views/diagram/sequence/segDgmList/seqDgmListItem.html
@@ -1,5 +1,5 @@
 <template name="seqDgmListItem">
-    <a href="#" class="list-group-item">
+    <a href="/diagram/{{_id}}" class="list-group-item">
         <h4 class="list-group-item-heading">{{title}}</h4>
         <p class="list-group-item-text">created {{createdAgo}} updated {{updatedAgo}} owner {{owner}}</p>
     </a>
