--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -33,7 +33,8 @@
                             <div class="form-group">
                                 <div class="col-sm-offset-1 col-sm-11">
                                     <button type="button" class="btn btn-primary disabled" id="redrawBtnID">Redraw</button>
-                                    <button type="button" class="btn btn-primary" id="saveBtnID">Save</button>
+                                    <button type="button" class="btn btn-primary" id="saveBtnID"> Save </button>
+                                    <button type="button" class="btn btn-danger" id="deleteBtnID">Delete</button>
                                 </div>
                             </div>
                         </form>
