add view only, cheat sheet, bootstrap

--- a/client/views/diagram/sequence/segDgmList/seqDgmListItem.html
+++ b/client/views/diagram/sequence/segDgmList/seqDgmListItem.html
@@ -1,5 +1,5 @@
 <template name="seqDgmListItem">
-    <a href="/diagram/{{_id}}" class="list-group-item">
+    <a href="/view/{{_id}}" class="list-group-item">
         <h4 class="list-group-item-heading">{{title}}</h4>
         <p class="list-group-item-text"><strong>created</strong> <small>{{createdAgo}}</small> by <strong>owner</strong> <small>{{username}}</small></p>
         <p class="list-group-item-text">
