--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -46,6 +46,7 @@
                                     <button type="button" class="btn btn-primary disabled" id="redrawBtnID">Redraw</button>
                                     <button type="button" class="btn btn-primary" id="saveBtnID"> Save </button>
                                     {{#if isUpdate}}
+                                        <button type="button" class="btn btn-default" id="shareBtnID">Share</button>
                                         <button type="button" class="btn btn-danger" id="deleteBtnID">Delete</button>
                                     {{/if}}
                                 </div>
