--- a/client/views/diagram/sequence/segDgmList/seqDgmList.html
+++ b/client/views/diagram/sequence/segDgmList/seqDgmList.html
@@ -1,4 +1,5 @@
 <template name="seqDgmList">
+    {{> topPanel}}
     <div id="seqDgmPagePage" class="page">
         <div class="content">
             <div class="col-md-offset-2 col-md-8">
