--- a/client/views/diagram/sequence/segDgmList/seqDgmListItem.html
+++ b/client/views/diagram/sequence/segDgmList/seqDgmListItem.html
@@ -1,6 +1,6 @@
 <template name="seqDgmListItem">
     <a href="/view/{{_id}}" class="list-group-item">
-        <h4 class="list-group-item-heading">{{title}} <i id="starBtnID" class="fa fa-{{star}} fa-2x pull-right"></i></h4>
+        <h4 class="list-group-item-heading">{{title}} <a id="starBtnID" href="#"><i id="" class="fa fa-{{star}} fa-2x pull-right"></i></a></h4>
         <p class="list-group-item-text">
             <strong>{{username}}</strong>
             <small>created</small> <strong>{{createdAgo}}</strong>
