--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -1,5 +1,6 @@
 <template name="seqDgmPage">
-    <div id="seqDgmPagePage" class="page">
+    {{> topPanel}}
+    <div id="seqDgmPage" class="page">
         <div class="content">
 
             <div class="col col-md-4">
