--- a/client/views/diagram/sequence/seqDgmView/seqDgmView.html
+++ b/client/views/diagram/sequence/seqDgmView/seqDgmView.html
@@ -5,7 +5,7 @@
             <div class="col col-md-12">
                 <div class="panel panel-info">
                     <div id="editBtnID" class="panel-heading">
-                        {{title}} {{#if canEdit}}<i class="fa fa-pencil-square-o pull-right"></i>{{/if}}
+                        {{title}} {{#if canEdit}}<a href="#"><i class="fa fa-pencil-square-o fa-2x pull-right"></i></a>{{/if}}
                     </div>
                     <div class="panel-body">
 
