--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -58,17 +58,12 @@
             </div>
 
             <!--<div class="col col-md-6 col-md-offset-3">-->
-            <div class="col col-md-8">
-                <div class="panel panel-info">
-                    <div class="panel-heading">
-                        {{titleLabel}}
-                    </div>
-                    <div class="panel-body">
+            <div class="col col-md-8" style="margin-top: -20px">
+                <h2>{{titleLabel}}</h2>
 
-                        <div id="diagram"></div>
 
-                    </div>
-                </div>
+                <div id="diagram"></div>
+
             </div>
 
         </div>
