--- a/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
+++ b/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
@@ -17,16 +17,9 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="inlineRadio1" class="col-sm-2 control-label">Starred</label>
                                 <div class="col-sm-10">
-                                    <label class="radio-inline">
-                                        <input type="radio" name="starredRadioName" id="inlineRadio1" value="both" checked="checked"> Yes or No
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="starredRadioName" id="inlineRadio2" value="true"> Yes
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="starredRadioName" id="inlineRadio3" value="false"> No
+                                    <label class="checkbox-inline">
+                                        <input type="checkbox" id="starredID" value="option1"> <strong>Starred</strong>
                                     </label>
                                 </div>
                             </div>
