--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -55,8 +55,7 @@
                                                 <li><a id="copyBtnID" href="#">Copy to new diagram</a></li>
                                             </ul>
                                         </div>
-
-                                        <button type="button" class="btn btn-danger" id="deleteBtnID">Delete</button>
+                                        <button type="button" class="btn btn-danger pull-right" id="deleteBtnID"><i class="fa fa-trash"></i></button>
                                     {{/if}}
                                 </div>
                             </div>
