--- a/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
+++ b/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
@@ -19,7 +19,20 @@
                             <div class="form-group">
                                 <div class="col-sm-10">
                                     <label class="checkbox-inline">
-                                        <input type="checkbox" id="starredID" value="option1"> <strong>Starred</strong>
+                                        <input type="checkbox" id="starredID" value="option1"> <strong>Starred</strong> <i class="fa fa-star"></i>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-10">
+                                    <label class="radio-inline">
+                                        <input type="radio" name="private" id="privateAndPublicID" value="privateAndPublic"> <strong>All</strong>
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="private" id="privateID" value="private"> <strong>Private</strong> <i class="fa fa-lock"></i>
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="private" id="publicID" value="public"> <strong>Public</strong> <i class="fa fa-unlock"></i>
                                     </label>
                                 </div>
                             </div>
