--- a/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
+++ b/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
@@ -24,6 +24,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
+                                <label for="privateAndPublicID" class="col-sm-2 control-label">Mine</label>
                                 <div class="col-sm-10">
                                     <label class="radio-inline">
                                         <input type="radio" name="private" id="privateAndPublicID" value="privateAndPublic"> <strong>All</strong>
@@ -33,6 +34,13 @@
                                     </label>
                                     <label class="radio-inline">
                                         <input type="radio" name="private" id="publicID" value="public"> <strong>Public</strong> <i class="fa fa-unlock"></i>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-10">
+                                    <label class="checkbox-inline">
+                                        <input type="checkbox" id="hideOtherPublicID" value="option1"> <strong>Only Show My Diagrams</strong>
                                     </label>
                                 </div>
                             </div>
