--- a/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
+++ b/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
@@ -2,56 +2,59 @@
     <div id="seqDgmListPage" class="page">
         <div class="content">
 
-            <div class="col col-md-4">
+            <div class="col col-md-5">
                 <div class="panel panel-info">
                     <div class="panel-heading">
-                        Filter Diagram List
+                        Search
                     </div>
                     <div class="panel-body">
-
-                        <!-- http://getbootstrap.com/css/#forms-inline -->
                         <form class="form-horizontal">
                             <div class="form-group">
                                 <div class="col-sm-12">
                                     <input type="text" class="form-control" id="searchTextID" placeholder="Search Text">
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <div class="col-sm-10">
-                                    <label class="checkbox-inline">
-                                        <input type="checkbox" id="starredID" value="option1"> <strong>Starred</strong> <i class="fa fa-star"></i>
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="privateAndPublicID" class="col-sm-2 control-label">Mine</label>
-                                <div class="col-sm-10">
-                                    <label class="radio-inline">
-                                        <input type="radio" name="private" id="privateAndPublicID" value="privateAndPublic"> <strong>All</strong>
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="private" id="privateID" value="private"> <strong>Private</strong> <i class="fa fa-lock"></i>
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="private" id="publicID" value="public"> <strong>Public</strong> <i class="fa fa-unlock"></i>
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-sm-10">
-                                    <label class="checkbox-inline">
-                                        <input type="checkbox" id="hideOtherPublicID" value="option1"> <strong>Only Show My Diagrams</strong>
-                                    </label>
+                            <div class="panel panel-info">
+                                <div class="panel-body">
+
+                                    <div class="form-group">
+                                        <div class="col-sm-10">
+                                            <label class="checkbox-inline">
+                                                <input type="checkbox" id="starredID" value="option1"> <strong>Starred</strong> <i class="fa fa-star"></i>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <!--<label for="privateAndPublicID" class="col-sm-2 control-label">My Diagrams</label>-->
+                                        <div class="col-sm-10">
+                                            <label class="radio-inline">
+                                                <input type="radio" name="private" id="privateAndPublicID" value="privateAndPublic"> <strong>All</strong>
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="private" id="privateID" value="private"> <strong>Private</strong> <i class="fa fa-lock"></i>
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="private" id="publicID" value="public"> <strong>Public</strong> <i class="fa fa-unlock"></i>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="col-sm-10">
+                                            <label class="checkbox-inline">
+                                                <input type="checkbox" id="hideOtherPublicID" value="option1"> <strong>Only Show My Diagrams</strong>
+                                            </label>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </form>
-
                     </div>
+
                 </div>
             </div>
 
 
-            <div class="col col-md-8">
+            <div class="col col-md-7">
 
                 {{> pagesNav}}
                 <div class="list-group">
