--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -56,11 +56,13 @@
                                             </ul>
                                         </div>
 
-                                        <button type="button" class="btn btn-danger pull-right" id="deleteBtnID"><i class="fa fa-trash"></i></button>
+                                        <button type="button" class="btn btn-danger pull-right" id="deleteBtnID" title="Delete"><i class="fa fa-trash"></i></button>
                                     {{/if}}
                                 </div>
                             </div>
                         </form>
+                        <hr>
+                        <p>Having trouble?  Check out the cheat sheet to the left, or look at the <a href="/examples">examples</a>.</p>
                     </div>
                 </div>
             </div>
