--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -3,10 +3,11 @@
     <div id="seqDgmPage" class="page">
         <div class="content">
 
-            <div class="col col-md-4">
+            <div class="col col-md-{{boxWidth}}">
                 <div class="panel panel-info">
                     <div class="panel-heading">
                         Diagram Text
+                        <a id="boxWidthBtnID" href="#" class="pull-right" title="Toggle width" style="margin-top: -5px"><i class="fa fa-chevron-circle-{{boxArrow}} fa-2x"></i></a>
                     </div>
                     <div class="panel-body">
                         <form class="form-horizontal">
@@ -68,7 +69,7 @@
             </div>
 
             <!--<div class="col col-md-6 col-md-offset-3">-->
-            <div class="col col-md-8" style="margin-top: -20px">
+            <div class="col col-md-{{diagramWidth}}" style="margin-top: -20px">
                 <h2>{{titleLabel}}</h2>
 
 
