--- a/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
+++ b/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
@@ -47,6 +47,32 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <div class="panel panel-info">
+                                <div class="panel-body">
+                                    <strong>Sort</strong>
+                                    <div class="form-group">
+                                        <div class="col-sm-8">
+                                            <select id="sortBtnID" class="form-control">
+                                                <option value="title">Title</option>
+                                                <option value="createdAt">Create Date</option>
+                                                <option value="updatedAt">Update Date</option>
+                                                <option value="username">Created By</option>
+                                                <option value="starCnt">Most Stars</option>
+                                            </select>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <label class="radio-inline">
+                                                <input type="radio" name="sortDir" id="sort1ID" value="1"> <strong>Asc</strong>
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="sortDir" id="sort-1ID" value="-1"> <strong>Desc</strong>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                         </form>
                     </div>
 
