--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -45,8 +45,9 @@
                                 <div class="col col-sm-12">
                                     <button type="button" class="btn btn-primary disabled" id="redrawBtnID">Redraw</button>
                                     <button type="button" class="btn btn-primary" id="saveBtnID"> Save </button>
+                                    <a class="btn btn-primary" href="/">Cancel</a>
                                     {{#if isUpdate}}
-                                        <button type="button" class="btn btn-default" id="shareBtnID">Share</button>
+                                        <button type="button" class="btn btn-default" id="shareBtnID"><i class="fa fa-share-square-o"></i>Share</button>
 
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
