--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -1,4 +1,4 @@
-<template name="seqDgmPage">
+<template name="seqDgmPage" xmlns="http://www.w3.org/1999/html">
     {{> topPanel}}
     <div id="seqDgmPage" class="page">
         <div class="content">
@@ -7,7 +7,10 @@
                 <div class="panel panel-info">
                     <div class="panel-heading">
                         Diagram Text
-                        <a id="boxWidthBtnID" href="#" class="pull-right" title="Toggle width" style="margin-top: -5px"><i class="fa fa-chevron-circle-{{boxArrow}} fa-2x"></i></a>
+                        <div class="pull-right" style="margin-top: -5px">
+                            <a id="starBtnID" href="#" class="padded"><i class="fa fa-{{star}} fa-2x"></i></a>
+                            <a id="boxWidthBtnID" href="#" title="Toggle width"><i class="fa fa-chevron-circle-{{boxArrow}} fa-2x"></i></a>
+                        </div>
                     </div>
                     <div class="panel-body">
                         <form class="form-horizontal">
@@ -55,11 +58,15 @@
                                             </button>
                                             <ul class="dropdown-menu" role="menu">
                                                 <li><a id="copyBtnID" href="#">Copy to new diagram</a></li>
+                                                <li role="presentation" class="divider"></li>
+                                                <li><a id="deleteBtnID" href="#"><i class="fa fa-trash"></i> <span class="text-danger"> Delete</span></a></li>
                                             </ul>
                                         </div>
-
-                                        <button type="button" class="btn btn-danger pull-right" id="deleteBtnID" title="Delete"><i class="fa fa-trash"></i></button>
                                     {{/if}}
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col col-sm-12">
                                 </div>
                             </div>
                         </form>
