--- a/client/views/diagram/sequence/segDgmList/item/seqDgmListItem.html
+++ b/client/views/diagram/sequence/segDgmList/item/seqDgmListItem.html
@@ -8,7 +8,7 @@
         </h4>
         <p class="list-group-item-text">
             <strong>{{username}}</strong>
-            <small title="created or updated">last modified</small> <strong>{{agoTime lastModifiedAt}}</strong>
+            <small title="created or updated">last modified</small> <strong>{{agoTime modifiedAt}}</strong>
         </p>
     </a>
 </template>
