--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -8,7 +8,7 @@
                     <div class="panel-heading">
                         Diagram Text
                         <div class="pull-right" style="margin-top: -5px">
-                            <a id="starBtnID" href="#" class="padded"><i class="fa fa-{{star}} fa-2x"></i></a>
+                            {{#if isUpdate}}<a id="starBtnID" href="#" class="padded"><i class="fa fa-{{star}} fa-2x"></i></a>{{/if}}
                             <a id="boxWidthBtnID" href="#" title="Toggle width"><i class="fa fa-chevron-circle-{{boxArrow}} fa-2x"></i></a>
                         </div>
                     </div>
