--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -71,7 +71,7 @@
                             </div>
                         </form>
                         <hr>
-                        <p>Having trouble?  Check out the cheat sheet to the left, or look at the <a href="/examples">examples</a>.</p>
+                        <p>Having trouble?  Check out the cheat sheet to the left.<!--, or look at the <a href="/examples">examples</a>.--></p>
                     </div>
                 </div>
             </div>
