--- a/client/views/diagram/sequence/seqDgmInfo.html
+++ b/client/views/diagram/sequence/seqDgmInfo.html
@@ -5,35 +5,72 @@
 
         <form class="form-horizontal">
             <div class="form-group">
-                <label for="_id" class="col-sm-2 control-label">_id</label>
-                <div class="col-sm-10">
+                <label for="_id" class="col-sm-3 control-label">_id</label>
+                <div class="col-sm-9">
                     <span class="form-control" id="_id">{{_id}}</span>
                 </div>
             </div>
             <div class="form-group">
-                <label for="title" class="col-sm-2 control-label">title</label>
-                <div class="col-sm-10">
+                <label for="title" class="col-sm-3 control-label">title</label>
+                <div class="col-sm-9">
                     <span class="form-control" id="title">{{title}}</span>
                 </div>
             </div>
             <div class="form-group">
-                <label for="createdAt" class="col-sm-2 control-label">createdAt</label>
-                <div class="col-sm-10">
+                <label for="style" class="col-sm-3 control-label">style</label>
+                <div class="col-sm-9">
+                    <span class="form-control" id="style">{{style}}</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="username" class="col-sm-3 control-label">username</label>
+                <div class="col-sm-9">
+                    <span class="form-control" id="username">{{username}}</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="createdAt" class="col-sm-3 control-label">createdAt</label>
+                <div class="col-sm-9">
                     <span class="form-control" id="createdAt">{{agoTime createdAt}}</span>
                 </div>
             </div>
             <div class="form-group">
-                <label for="updatedAt" class="col-sm-2 control-label">updatedAt</label>
-                <div class="col-sm-10">
+                <label for="updateUsername" class="col-sm-3 control-label">updateUsername</label>
+                <div class="col-sm-9">
+                    <span class="form-control" id="username">{{updateUsername}}</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="updatedAt" class="col-sm-3 control-label">updatedAt</label>
+                <div class="col-sm-9">
                     <span class="form-control" id="updatedAt">{{agoTime updatedAt}}</span>
                 </div>
             </div>
             <div class="form-group">
-                <label for="username" class="col-sm-2 control-label">username</label>
-                <div class="col-sm-10">
-                    <span class="form-control" id="username">{{username}}</span>
+                <label for="private" class="col-sm-3 control-label">private</label>
+                <div class="col-sm-9">
+                    <span class="form-control" id="private">{{private}}</span>
                 </div>
             </div>
+            <div class="form-group">
+                <label for="starCnt" class="col-sm-3 control-label">starCnt</label>
+                <div class="col-sm-9">
+                    <span class="form-control" id="starCnt">{{starCnt}}</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="starredBy" class="col-sm-3 control-label">starredBy</label>
+                <div class="col-sm-9">
+                    <span class="form-control" id="starredBy">{{starredBy}}</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="tags" class="col-sm-3 control-label">tags</label>
+                <div class="col-sm-9">
+                    <span class="form-control" id="tags">{{tags}}</span>
+                </div>
+            </div>
+
         </form>
     </div>
 </template>
