--- a/client/views/diagram/sequence/seqDgmView/seqDgmView.html
+++ b/client/views/diagram/sequence/seqDgmView/seqDgmView.html
@@ -6,11 +6,14 @@
 
             <div class="col col-md-12">
                 <div>
-                    {{#if canEdit}}<a class="btn btn-primary btn-lg" href="/diagram/{{_id}}"><i class="fa fa-pencil-square-o">  Edit </i></a>{{/if}}
+                    {{#if canEdit}}
+                        <a class="btn btn-primary btn-lg" href="/diagram/{{_id}}"><i class="fa fa-pencil-square-o">  Edit </i></a>
+                    {{/if}}
                     <a id="shareBtnID" class="btn btn-default btn-lg" title="Link to diagram for sharing"><i class="fa fa-share-square-o"> Share</i></a>
                     <a id="infoBtnID" class="btn btn-default btn-lg" title="Show info about diagram"><i class="fa fa-info-circle"> Info </i></a>
                     <span class="h2 padded"> {{title}} </span>
-                    {{#if canEdit}}<a id="starBtnID" href="#" class="padded"><i class="fa fa-{{star}} fa-2x"></i></a>{{/if}}
+                    <i class="fa fa-{{lock}} fa-2x"></i>
+                    <a id="starBtnID" href="#" class="padded"><i class="fa fa-{{star}} fa-2x"></i><span class="badge">{{starCnt}}</span></a>
                     <span class="badge pull-right">{{agoTime modifiedAt}}</span>
                 </div>
 
