--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -57,8 +57,8 @@
                                                 Action <span class="caret"></span>
                                             </button>
                                             <ul class="dropdown-menu" role="menu">
-                                                <li><a id="copyBtnID" href="#">Copy to new diagram</a></li>
-                                                <li><a id="infoBtnID" href="#">Show info</a></li>
+                                                <li><a id="copyBtnID" href="#"><i class="fa fa-files-o"></i> Copy to new diagram</a></li>
+                                                <li><a id="infoBtnID" href="#"><i class="fa fa-info-circle"></i> Show info</a></li>
                                                 <li role="presentation" class="divider"></li>
                                                 <li><a id="deleteBtnID" href="#"><i class="fa fa-trash"></i> <span class="text-danger"> Delete</span></a></li>
                                             </ul>
