--- a/client/views/diagram/sequence/seqDgmInfo.html
+++ b/client/views/diagram/sequence/seqDgmInfo.html
@@ -31,7 +31,7 @@
             <div class="form-group">
                 <label for="createdAt" class="col-sm-3 control-label">createdAt</label>
                 <div class="col-sm-9">
-                    <span class="form-control" id="createdAt">{{agoTime createdAt}}</span>
+                    <span class="form-control" id="createdAt">{{formatTime createdAt}}</span>
                 </div>
             </div>
             <div class="form-group">
@@ -43,7 +43,7 @@
             <div class="form-group">
                 <label for="updatedAt" class="col-sm-3 control-label">updatedAt</label>
                 <div class="col-sm-9">
-                    <span class="form-control" id="updatedAt">{{agoTime updatedAt}}</span>
+                    <span class="form-control" id="updatedAt">{{formatTime updatedAt}}</span>
                 </div>
             </div>
             <div class="form-group">
