--- a/client/views/diagram/sequence/segDgmList/item/seqDgmListItem.html
+++ b/client/views/diagram/sequence/segDgmList/item/seqDgmListItem.html
@@ -2,13 +2,13 @@
     <a href="/view/{{_id}}" class="list-group-item">
         <h4 class="list-group-item-heading">{{title}} {{#if private}}<i class="fa fa-lock" title="private"></i>{{/if}}
             <div class="pull-right">
-                <span class="badge">{{starCnt}}</span>
-                <a id="starBtnID" href="#"><i class="fa fa-{{star}} fa-2x"></i></a>
+                <a id="starBtnID" href="#"><span class="badge">{{starCnt}}</span><i class="fa fa-{{star}} fa-2x"></i></a>
             </div>
         </h4>
         <p class="list-group-item-text">
-            <strong>{{username}}</strong>
-            <small title="created or updated">last modified</small> <strong>{{agoTime modifiedAt}}</strong>
+            <span class="label label-primary">{{username}}</span>
+            <small>last modified</small>
+            <span class="badge">{{agoTime modifiedAt}}</span>
         </p>
     </a>
 </template>
