--- a/client/views/diagram/sequence/seqDgmView/seqDgmView.html
+++ b/client/views/diagram/sequence/seqDgmView/seqDgmView.html
@@ -11,7 +11,8 @@
                     {{/if}}
                     <a id="shareBtnID" class="btn btn-default btn-lg" title="Link to diagram for sharing"><i class="fa fa-share-square-o"> Share</i></a>
                     <a id="infoBtnID" class="btn btn-default btn-lg" title="Show info about diagram"><i class="fa fa-info-circle"> Info </i></a>
-                    <span class="h2 padded"> {{title}} </span>
+
+                    <span class="h2 padded"> <span class="text-primary">{{username}}</span> {{title}} </span>
                     <i class="fa fa-{{lock}} fa-2x"></i>
                     <a id="starBtnID" href="#" class="padded"><i class="fa fa-{{star}} fa-2x"></i><span class="badge">{{starCnt}}</span></a>
                     <span class="badge pull-right">{{agoTime modifiedAt}}</span>
