--- a/client/views/diagram/sequence/segDgmList/item/seqDgmListItem.html
+++ b/client/views/diagram/sequence/segDgmList/item/seqDgmListItem.html
@@ -9,6 +9,10 @@
             <span class="label label-primary">{{username}}</span>
             <small>last modified</small>
             <span class="badge">{{agoTime modifiedAt}}</span>
+            {{#if hasTags}}
+                <small>tags</small>
+                {{> tagsDisplay}}
+            {{/if}}
         </p>
     </a>
 </template>
