--- a/client/views/diagram/sequence/seqDgmInfo.html
+++ b/client/views/diagram/sequence/seqDgmInfo.html
@@ -72,6 +72,12 @@
                 </div>
             </div>
             <div class="form-group">
+                <label for="splash" class="col-sm-3 control-label">splash</label>
+                <div class="col-sm-9">
+                    <span class="form-control" id="splash">{{splash}}</span>
+                </div>
+            </div>
+            <div class="form-group">
                 <label for="tags" class="col-sm-3 control-label">tags</label>
                 <div class="col-sm-9">
                     <span class="form-control" id="tags">{{tags}}</span>
